--- a/accounts/templates/account/signup.html
+++ b/accounts/templates/account/signup.html
@@ -1,10 +1,5 @@
-{% extends 'base.html' %}
-{% load django_bootstrap5 %}
-
-{% block title %}サインアップ | Private Diary{% endblock %}
-
-{% block active_signup %}active{% endblock %}
-
+{% extends 'base.html' %} {% load bootstrap5 %} {% block title %}サインアップ |
+Private Diary{% endblock %} {% block active_signup %}active{% endblock %} 
 {% block contents %}
 <div class="container">
     <div class="row">
@@ -13,12 +8,14 @@
             <form method="post" action="{% url 'account_signup' %}">
                 {% csrf_token %}
 
-                <div class="mb-4 col-4">
-                    {% bootstrap_form form %}
-                </div>
+                <div class="mb-4 col-4">{% bootstrap_form form %}</div>
 
                 {% if redirect_field_value %}
-                    <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}"/>
+                <input
+                    type="hidden"
+                    name="{{ redirect_field_name }}"
+                    value="{{ redirect_field_value }}"
+                />
                 {% endif %}
 
                 <button class="btn btn-primary" type="submit">登録</button>
